# codex-island

./: .gitignore  LICENSE  README.md  README_EN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
macos-host/: Info.plist  Package.swift
macos-host/Sources/CodexIslandHost/: AppDelegate.swift  IslandLayout.swift  IslandPanel.swift  NativeCommandBridge.swift  RuntimePaths.swift  WebViewBridge.swift
macos-host/Sources/CodexIslandHostApp/: main.swift
macos-host/Tests/CodexIslandHostTests/: IslandLayoutTests.swift  RuntimePathsTests.swift
native-bridge/: Cargo.toml
native-bridge/src/: lib.rs  main.rs
native-bridge/tests/: bridge_cli.rs
scripts/: build_macos_host_app.sh
src/: App.tsx  hostBridge.ts  mockSessions.ts  sessionPayloadMerge.test.ts  sessionPayloadMerge.ts  sessionPresentation.test.ts  sessionPresentation.ts  styles.css  types.ts  useSessions.ts
src-core/: Cargo.toml
src-core/assets/: codex-island-state.py
src-core/src/: discovery.rs  focus.rs  hooks.rs  lib.rs  models.rs  notify.rs  session_store.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  window.rs
