[package]
name = "codex-island-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.1"
objc2-foundation = { version = "0.3.1", features = ["NSObject", "NSString", "NSUserNotification"] }
